# TagPDF

./: .gitignore  AUTHORS  README.md  build.bat  main.spec  pyproject.toml  requirements.txt  version.txt
res/: res.qrc  style.qss
src/: main.py  res.py
src/core/: functions.py  model.py  update.py
src/ui/: __init__.py  check_filter.py  dir_tree.py  file_table.py  filter_frame.py  main_window.py  path_frame.py  pdf_filter.py  pdf_view.py  preview_frame.py  scan_frame.py
src/ui/info_editor/: __init__.py  info_editor.py  tag_edit.py  year_spin.py
src/ui/info_frame/: __init__.py  info_frame.py  tag_edit.py  year_spin.py
