[project]
name = "TagPDF"
version = "1.8.0"
description = "A PDF tagging tool built with PySide6 and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyinstaller>=6.20.0",
    "pypinyin>=0.55.0",
    "pyside6>=6.11.0",
    "pyside6-stubs>=6.7.3.0",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.49",
]
